tests/ui/fail/invalid_operator.stderr
error: Invalid SQL operator `INVALID`

         = help: =, !=, >, <, >=, <=, LIKE, ILIKE, IN, NOT IN

 --> tests/ui/fail/invalid_operator.rs:6:13
  |
6 |         age INVALID i32  // Invalid operator
  |             ^^^^^^^

error[E0433]: failed to resolve: use of undeclared type `UserFilter`
  --> tests/ui/fail/invalid_operator.rs:11:19
   |
11 |     let _filter = UserFilter::new(25);
   |                   ^^^^^^^^^^ use of undeclared type `UserFilter`
